--- a/styles/index.css
+++ b/styles/index.css
@@ -37,15 +37,14 @@ body {background-color: #9DBEBB;}
     position: absolute;
     top: 0px;
     bottom: 20px;
-    left: -200;
-    right: 200px;
+    right: 600px;
 }
 
 
 .roboto {
     font-family: "Roboto", serif;
     font-optical-sizing: auto;
-    font-weight: <400>;
+    font-weight: 400;
     font-style: normal;
 }
 
@@ -78,7 +77,7 @@ body {background-color: #9DBEBB;}
 }
 
 .headlines_end {
-    padding-top: 60px;
+    padding-top: 50px;
     display: flex;
     align-content: center;
 }
@@ -95,14 +94,21 @@ body {background-color: #9DBEBB;}
     box-shadow: 0px 0px 10px 0 rgb(0 0 0 / 0.2);
     position: absolute;
     left: 250px;right: 0;
+    
  }
 
  button:hover {
     background-color: #69b2bb;
 }
+
+.input-field:hover {
+    background-color: rgb(209, 40, 40);
+}
+ 
 input:required:valid {
     border-color: green;
   }
+
   input:invalid {
     border-color: red;
   
